testcases/valid/return_if.shp
class Main<p1> where
    p1: [Main<p1>]
{
    f: i32;

    fn getter(): i32
    {
        return f;
        f = 0;
    }

    fn getter2(): i32
    {
        if true {
            return f;
        }

        return 0;
    }

    fn getter3(): i32
    {
        if true {
            return f;
        } else {
            return 0;
        }
    }

    fn getter4(): i32
    {
        if true {
            return f;
        } else {
            if false {
                return 0;
            } else {
                return f + f;
            }
        }
    }
}
